# dotfiles

./: .editorconfig  .emmyrc.json  .envrc  .envrc.sample  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  brew-file  dev-shell.nix  dockerfile  flake.nix  justfile  pacman-file  pyproject.toml  renovate.json5  setup.cfg
.github/workflows/: build.yml  check.yml  ci.yml  pre-commit.yml
bspwm/: autostart.sh  bspwmrc
fzf/: .fzf.zsh
libinput-gestures/.config/: libinput-gestures.conf
nix/: flake.nix
nix/common/: bluetooth.nix  bootloader-systemd.nix  gtk.nix  home.nix  hyprland.nix  ld-lsp.nix  login-manager-tuigreet.nix  nix-settings.nix  nvim.nix  podman.nix  sound-pipewire.nix  theme.nix  user-zahid.nix  virt-manager.nix  wayland-desktop-environment.nix
nixos/: README.md
nixos/common/: nvimPackages.nix
nixos/containers/: README.md  adguard.nix  adguardhome.nix  ai.nix  attic.nix  backup.nix  books.nix  container-common.nix  container-tailscale.nix  default.nix  forgejo-runner.nix  forgejo.nix  hermes-agent.nix  home-assistant.nix  immich.nix  karakeep.nix  mealie.nix  navidrome.nix  nginx.nix  ntfy.nix  ollama.nix  onecli.nix  options.nix  paperless-ngx.nix  paperless.nix  searx.nix  settings.nix  stirling-pdf.nix  tailscale-serve.nix  trilium.nix  unbound.nix  uptime-kuma.nix  vane.nix  watch.nix  zeroclaw.nix
nixos/microvms/: default.nix  immich.nix  vm-user.nix
nixos/modules/: agenix.nix  ai.nix  aliases.nix  anyrun.nix  (+55 more)
polybar/: config.ini
sxhkd/: sxhkdrc
xbindkeys/: .xbindkeysrc
xorg/: .Xresources  .xinitrc
zsh/: README.md
(+303 files in other folders)
