[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Zahid Kizmaz <tech@zahid.rocks>"]

[tool.poetry.dependencies]
python = "^3.10"
pynvim = "^0.4.3"
python-lsp-server = {version = "^1.3.3", extras = ["all"]}
pylsp-rope = "^0.1.8"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
bandit = "^1.7.1"
yamllint = "^1.26.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
